<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Dishes"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_Tables"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_Chairs"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_Menus"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="restaurent materials">
        <menu>
            <item
                android:id="@+id/nav_Folks"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_Flask"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
